responsive-nav.css
*{
    margin: 40;
    padding: 0;
}
body{
    
    overflow-x: hidden;
}
::-webkit-scrollbar{
   
    width: 10px;
    background-color: rgba(119, 1, 1, 0.832);
}
::-webkit-scrollbar-track {

    background-color: rgba(119, 1, 1, 0.832);
    
  }
 ::-webkit-scrollbar-thumb {
    background-image:linear-gradient(to top, rgb(41, 41, 246), red , yellow);
    border-radius: 10px;
    padding: 10px;
   
  }
  ::-webkit-scrollbar-thumb:hover {
    background-image:linear-gradient(to top, yellow, red , blue);
  }
/* fonts */
.mochiy{
    font-family: 'Mochiy Pop One', sans-serif;
    ;
}
.concert{
    font-family: 'Concert One', cursive;
}
.lexend{
    font-family: 'Lexend Deca', sans-serif;
    font-size: 15px;
}
/*  */
header{
    
    background-attachment: fixed;
    width: 100%;
    height: 90vh;
    background-image: url('p-img/b1.png'), url('p-img/bg1.jpeg');
    background-size: 50% 100%,cover;
    background-position: right,center;
    background-repeat: no-repeat;
   
}

nav{

    z-index: 50;
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: sans-serif;
    background-color: rgba(26, 24, 24, 0.758);
    min-height:60px;
   
}
.logo{
    font-family: 'Mochiy Pop One', sans-serif;
    margin-left: 110px;
    color: rgba(255, 255, 255, 0.904);
    letter-spacing: 3px;
    font-size: 25px;
    font-weight: bolder;
}
.nav-links{
    margin-top: 15px;
    font-family: 'Mochiy Pop One', sans-serif;
    list-style: none;
    display: flex;
    justify-content: space-between;
    width: 65%;
    margin-right: 58px;
    
}
.nav-links a{
    margin: 2px;
    padding: 10px 20px;
    text-decoration: none;
    font-size: 13px;
    color: white;
    font-weight: bold;
}
.nav-links a:hover{
    background-color: rgba(255, 255, 255, 0.897);
    border-top-left-radius: 8px;
    border-bottom-right-radius: 8px;
    transition: .3s;
    color: black;
}
.burger{
    margin-right: 20px;
    display: none;
}
.burger div{
    width: 25px;
    height: 3px;
   background-color: white;
   margin: 5px;
   
   

}
.text{
    font-family: 'Righteous', cursive;
    color: white;
    padding-top: 30vh;
    padding-left: 100px;
    
}
.h1{
    font-family: 'Righteous', cursive;
    
}
.h4{
    font-family: 'Righteous', cursive;
}
.text h4{
   
    font-size: 25px;

}
.text h1{
   
    font-size: 50px;
}
.btn{
    align-items: center;
    font-family: 'Mochiy Pop One', sans-serif;
    margin-top: 15px;
    height: 40px;
    border: none;
    border-top-left-radius: 10px;
    border-bottom-right-radius: 10px;
    background-image:linear-gradient(to right, red , yellow);
}
.btn-link{
    text-decoration: none;
    padding: 10px;
    color: black;
    font-weight: bolder;
    font-size: 20px;

}
.btn:hover{
    transition: .2s;
    transform: scale(1.05);
    box-shadow: 3px 3px 3px 3px rgba(128, 128, 128, 0.518);
}
.glowing-btn{
    position: relative;
    margin-top: 20px;
    height: 60px;
    width: 200px;
    border-radius: 50px;
    border: none;
    outline: none;
    background: rgb(249, 249, 7);
    color: #fff;
    letter-spacing: 2px;
    text-transform: uppercase;
    cursor: pointer;
}

.glowing-btn:hover::before{
    opacity: 1;
    z-index: -1;

}

.glowing-btn:hover{
    z-index: 1;
    animation: glow 8s linear infinite;
    background: linear-gradient( 90deg, #f22e69, #f8c027,#e43603,rgb(250, 250, 30));
    background-size: 400%;


}
.glowing-btn:before{
    content:'' ;
    position: absolute;
    background: inherit;
    top: -5px;
    bottom: -5px;
    left: -5px;
    right: -5px;
    border-radius: 20px;
    filter: blur(20px);

}
@keyframes glow{
    0%{
        background-position: 0%;
    }
    100%{
        background-position: 400%;
    }
}
/* about starts */
#about{  
    -webkit-clip-path: polygon(52% 16%, 100% 0, 100% 100%, 50% 100%, 0 100%, 0 0); 
    clip-path: polygon(0.0% 1.71em, 3.4% 1.52em, 6.9% 1.29em, 10.3% 1.05em, 13.8% 0.81em, 17.2% 0.58em, 20.7% 0.37em, 24.1% 0.20em, 27.6% 0.08em, 31.0% 0.00em, 34.5% -0.01em, 37.9% 0.03em, 41.4% 0.13em, 44.8% 0.27em, 48.3% 0.45em, 51.7% 0.66em, 55.2% 0.88em, 58.6% 1.10em, 62.1% 1.30em, 65.5% 1.46em, 69.0% 1.59em, 72.4% 1.65em, 75.9% 1.66em, 79.3% 1.60em, 82.8% 1.47em, 86.2% 1.28em, 89.7% 1.02em, 93.1% 0.72em, 96.6% 0.37em, 100.0% 0.00em, 100% 100%, 0% 100%);
   background-color: white;
   margin-top: -30px;
   padding-top: 30px;
   
} 
.section-info{
    text-align: center;
}
.about-content{
    padding: 30px 0px;
}
.about-text{
    text-align: justify;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

.about-img{
    display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 10px;
   
}

/* skills */
#skills{
    background-image: url(p-img/bg2.jpg);
    background-attachment: fixed;
    padding-top: 5vh;
    padding-bottom: 50px;
    clip-path: polygon(0.0% 1.71em, 3.4% 1.52em, 6.9% 1.29em, 10.3% 1.05em, 13.8% 0.81em, 17.2% 0.58em, 20.7% 0.37em, 24.1% 0.20em, 27.6% 0.08em, 31.0% 0.00em, 34.5% -0.01em, 37.9% 0.03em, 41.4% 0.13em, 44.8% 0.27em, 48.3% 0.45em, 51.7% 0.66em, 55.2% 0.88em, 58.6% 1.10em, 62.1% 1.30em, 65.5% 1.46em, 69.0% 1.59em, 72.4% 1.65em, 75.9% 1.66em, 79.3% 1.60em, 82.8% 1.47em, 86.2% 1.28em, 89.7% 1.02em, 93.1% 0.72em, 96.6% 0.37em, 100.0% 0.00em, 100% 100%, 0% 100%);
}
.skill-head{
    text-align: center;
    color: white;
}
.skill-text{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    color: rgb(184, 179, 179);
    padding: 25px 40px;
}
.skill-content{
    margin: 30px 30px;
    
    background-color: rgba(31, 28, 28, 0.734);
}
.progress-div{
    padding-top: 20px;
    padding-left: 8%;
    color: wheat;
}
progress{
    width: 80%;
    height: 25px;
    
    
}



/*  */
/* services */
#services{
    padding: 50px 50px;
}
.services-row{
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}
.services-box{
    flex-basis: 25%;
    text-align: center;
    box-shadow: 3px 4px 4px 5px rgba(161, 160, 160, 0.848);
    padding: 20px;
    margin-top: 20px;

}
.services-box:hover{
    background: red;
    color: white;
    transition: .4s;

}
.services-box img{
    width: 70%;
}
/* services end*/
/* contact */
#contact{
    padding: 50px 50px;
    background: linear-gradient(160deg, #e74c3c 45%, white 0%);
}
.contact-row{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.contact-left-col{
    flex-basis: 50%;
}
.contact-right-col{
    flex-basis: 50%;

}
.contact-right-col h2{
    margin-bottom: 20px;
}
.contact-right-col input{
    width: 80%;
    padding: 10px;
    margin-bottom: 10px;
    box-shadow: 2px 2px 2px 2px gray;
    border: none;

}
.contact-right-col textarea{
    width: 80%;
    padding: 10px;
    box-shadow: 2px 2px 2px 2px gray;
    border: none;
}
/* footer */
.footer{
    padding-left: 30px;
    padding-top: 15px;
    height: 50px;
    color: white;
    background-color: red;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.footer ul{
    font-size: 25px;
    display: flex;
    flex-basis: 50%;
    align-items: center;
    justify-content: space-around;
    list-style-type: none;
}
.footer a{
    text-decoration: none;
    color: white;
}



/* media ipad */
@media screen and (max-width:820px){

    nav{
        justify-content: space-between;
    }
  
    .burger{
        display: block;
        cursor: pointer;
    }
    .burger div{
        display: block;
        transition: all .6s ease;
        
    }
    .logo{
        margin-left: 30px;
    }
    .nav-links{
        position: absolute; 
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        right: -35px;
        height: 100vh;
        background-color: rgba(26, 24, 24, 0.758);
        top: 45px;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: .3s ease-in;
        border-bottom-left-radius: 50px;
        margin-right: 30px;
        padding-bottom: 150px;
        
    }

    #about{
        clip-path: polygon(0.0% 1.71em, 3.4% 1.52em, 6.9% 1.29em, 10.3% 1.05em, 13.8% 0.81em, 17.2% 0.58em, 20.7% 0.37em, 24.1% 0.20em, 27.6% 0.08em, 31.0% 0.00em, 34.5% -0.01em, 37.9% 0.03em, 41.4% 0.13em, 44.8% 0.27em, 48.3% 0.45em, 51.7% 0.66em, 55.2% 0.88em, 58.6% 1.10em, 62.1% 1.30em, 65.5% 1.46em, 69.0% 1.59em, 72.4% 1.65em, 75.9% 1.66em, 79.3% 1.60em, 82.8% 1.47em, 86.2% 1.28em, 89.7% 1.02em, 93.1% 0.72em, 96.6% 0.37em, 100.0% 0.00em, 100% 100%, 0% 100%);
        margin-top: -150px;
        
    }
   
    .about-text{
        text-align: justify;
    }
  
  
    .text{
        
        padding-top:20%;
        padding-left: 50px;
        max-width: 50%;
    
    }
    .text h4{
        font-size: 23px;
    }
    .text h1{
        font-size: 35px;
    }
    /* service */
    .service-box{
       width: 70%; 
    }
    /*  */
    .services-box{
        flex-basis: 75%;
    
    } 

    /*  */
 
    .contact-right-col{
        flex-basis: 100%;
    
    }
    
    /*  */
    .footer ul{
        flex-basis: 70%;
    }


}
/* media pixel5 */
@media screen and (min-height:900px){
    body{
        margin-right: -150px;
    }
    
}
@media screen and (max-width:430px){
    body{
        margin-right: -50px;
    }
    #about{
        clip-path:polygon(0.0% 1.71em, 3.4% 1.52em, 6.9% 1.29em, 10.3% 1.05em, 13.8% 0.81em, 17.2% 0.58em, 20.7% 0.37em, 24.1% 0.20em, 27.6% 0.08em, 31.0% 0.00em, 34.5% -0.01em, 37.9% 0.03em, 41.4% 0.13em, 44.8% 0.27em, 48.3% 0.45em, 51.7% 0.66em, 55.2% 0.88em, 58.6% 1.10em, 62.1% 1.30em, 65.5% 1.46em, 69.0% 1.59em, 72.4% 1.65em, 75.9% 1.66em, 79.3% 1.60em, 82.8% 1.47em, 86.2% 1.28em, 89.7% 1.02em, 93.1% 0.72em, 96.6% 0.37em, 100.0% 0.00em, 100% 100%, 0% 100%);
        margin-top: -150px;
        
        }
        .text{
             padding:39%;
            padding-left: 30px;
            max-width: 60%;
        }
      

}



.nav-active{
    transform: translateX(0%);
}
.toggle .line1{
    transform: rotate(-405deg ) translate(-5px,6px);
}
.toggle .line2{
    opacity: 0;
}
.toggle .line3{
    transform: rotate(405deg ) translate(-5px,-6px);
}

